2008-12-27  Sven Neumann  <sven@gimp.org>

	Bug 564593 – crash when the drawable is changed while a color
	tools is active

	* app/core/gimpdrawable-shadow.c (gimp_drawable_merge_shadow_tiles):
	keep a reference to the shadow tiles because it might otherwise be
	free'd under our feet.

2008-12-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/file-gbr.c: let the save procedure accept a
	grayscale layer with alpha channel, as we do in the GIH save
	procedure.

	* plug-ins/common/file-gih.c: when loading a brush mask pipe,
	create grayscale layers without an alpha channel. Changed the save
	procedure to also accept layers without alpha channel.

2008-12-25  Martin Nordholts  <martinn@svn.gnome.org>

	* app/widgets/gimplayertreeview.[ch]: Make instance members
	private (they were not accessed from the outside).

2008-12-25  Martin Nordholts  <martinn@svn.gnome.org>

	* app/widgets/gimpchanneltreeview.[ch]: Make instance members
	private (they were not accessed from the outside).

2008-12-25  Martin Nordholts  <martinn@svn.gnome.org>

	* app/widgets/gimpitemtreeview.[ch]: Make instance members private
	and add getters that didn't already exist.

	(gimp_item_tree_view_get_new_button)
	(gimp_item_tree_view_get_edit_button): New getters.

	* app/actions/actions.c
	* app/widgets/gimpvectorstreeview.c
	* app/widgets/gimplayertreeview.c
	* app/widgets/gimpdrawabletreeview.c
	* app/widgets/gimpchanneltreeview.c: Use new getters.

2008-12-23  Sven Neumann  <sven@gimp.org>

	* configure.in: if supported, add -Wformat-security and
	-Wformat-non-literal to the compiler flags.

2008-12-23  Sven Neumann  <sven@gimp.org>

	* app/batch.c
	* tools/gimptool.c: declared functions calling exit() as
	G_GNUC_NORETURN.

2008-12-21  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c: fixed handling of tags which contain
	non-ASCII characters.

2008-12-21  Sven Neumann  <sven@gimp.org>

	Bug 564869 – GIMP crashes on selecting Tools->GEGL operation
